# azure_pipeline_test

./: CMakeLists.txt  azure-pipelines.yml  main.cpp  main_fail.cpp
